<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/background_home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to"
            android:textSize="@dimen/ukuranFontJudul"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/lemon"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/if_apps"
            android:textSize="@dimen/ukuranFontJudulBesar"
            android:layout_marginTop="65dp"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/lemon"
            />

    </RelativeLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/background_button_home"
                android:id="@+id/iv_pengumuman"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/announcement_logo"
                android:layout_marginLeft="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pengumuman"
                android:layout_marginTop="150dp"
                android:layout_marginLeft="18dp"
                android:textSize="@dimen/ukuranFontJudul"
                android:fontFamily="@font/lemon"

                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >

            <ImageView
                android:id="@+id/iv_pertemuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/background_button_home" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/meeting_logo"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pertemuan"
                android:layout_marginTop="150dp"
                android:layout_marginLeft="30dp"
                android:textSize="@dimen/ukuranFontJudul"
                android:fontFamily="@font/lemon"
                />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <RelativeLayout
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/background_button_home"
                android:id="@+id/iv_frs"

                />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="22dp"
                android:src="@drawable/notes_logo"
                android:fontFamily="@font/lemon"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frs"
                android:layout_marginTop="150dp"
                android:layout_marginLeft="80dp"
                android:textSize="@dimen/ukuranFontJudul"
                android:fontFamily="@font/lemon"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/background_button_home"
                android:id="@+id/iv_logout"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logout_logo"
                android:layout_marginLeft="22dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_marginTop="150dp"
                android:layout_marginLeft="50dp"
                android:textSize="@dimen/ukuranFontJudul"
                android:fontFamily="@font/lemon"
                />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>